RESOLVED FIXED202330
[JSC] Keep JSString::value(ExecState*)'s result as String instead of `const String&`
https://bugs.webkit.org/show_bug.cgi?id=202330
Summary [JSC] Keep JSString::value(ExecState*)'s result as String instead of `const S...
Yusuke Suzuki
Reported 2019-09-27 13:28:22 PDT
[JSC] Keep JSString::value(ExecState*)'s result as String instead of `const String&`
Attachments
Patch (11.59 KB, patch)
2019-09-27 14:01 PDT, Yusuke Suzuki
no flags
Patch (12.03 KB, patch)
2019-09-27 14:04 PDT, Yusuke Suzuki
saam: review+
Patch (12.04 KB, patch)
2019-09-27 14:14 PDT, Yusuke Suzuki
no flags
Yusuke Suzuki
Comment 1 2019-09-27 14:01:39 PDT
Yusuke Suzuki
Comment 2 2019-09-27 14:04:42 PDT
Mark Lam
Comment 3 2019-09-27 14:11:25 PDT
Comment on attachment 379763 [details] Patch r=me too if jsc tests pass with a debug build. The reason is because you added a new ThrowScope. Need to make sure that there are no new exception check validation failures.
Yusuke Suzuki
Comment 4 2019-09-27 14:14:20 PDT
Created attachment 379765 [details] Patch Patch for landing
Yusuke Suzuki
Comment 5 2019-09-27 14:15:05 PDT
(In reply to Mark Lam from comment #3) > Comment on attachment 379763 [details] > Patch > > r=me too if jsc tests pass with a debug build. The reason is because you > added a new ThrowScope. Need to make sure that there are no new exception > check validation failures. Thanks, I've just fixed and uploaded the patch for landing. I'll check EWS before landing it :)
Yusuke Suzuki
Comment 6 2019-09-27 14:15:36 PDT
Yusuke Suzuki
Comment 7 2019-09-27 20:40:30 PDT
Note You need to log in before you can comment on or make changes to this bug.